--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "loveandwar",
+  "homepage": "http://mkavarts.github.io/reactStateOfTheNation",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +14,8 @@
     "reactstrap": "^5.0.0-beta.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy" : "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
